--- a/nginx.qa.conf
+++ b/nginx.qa.conf
@@ -2,6 +2,21 @@ server {
     listen       80;
     server_name  _;
 
+    gzip on;
+    gzip_types
+        text/css
+        text/javascript
+        text/xml
+        text/plain
+        application/javascript
+        application/x-javascript
+        application/json
+        application/xml
+        application/rss+xml
+        application/atom+xml
+        font/truetype
+        font/opentype
+        image/svg+xml;
 
     location /admin-api/ {
       add_header 'Access-Control-Allow-Origin' 'http://localhost:9527' always;
